correction of gap

--- a/style.css
+++ b/style.css
@@ -223,6 +223,7 @@
 .stories-content {
     width: 100%;
     display: flex;
+    gap:40px;
 }
 
 .stories-left {
